# GramTrans

./: CLAUDE.md  README.md  STATUS.md  Transfer FLEx Grammar Module.md  conftest.py  flextools.ini  pyproject.toml  run_gui_harness.cmd  run_gui_harness.py  tests.txt  verify_phase3c_scenario_a.py
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backups/: Target 2026-07-06 0218.fwbackup
debug/: README.md  coverage_report.py  probe_persist.py
specs/: merge-semantics-audit-2026-07-07.md  wizard-selection-roadmap.md
specs/001-phase0-additive-transfer/: .spec-context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase1-overwrite/: .spec-context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-phase2-interactive-merge/: .spec-context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-phase3-pipeline/: .spec-context.json
specs/005-phonology-block/: .spec-context.json  plan.md  probe-results.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-inflection-prep-block/: .spec-context.json  data-model.md  plan.md  probe-results.md  quickstart.md  research.md  spec.md  tasks.md  us2-blocker-memo.md  verification-log.md
specs/007-affixes-stems/: .spec-context.json  data-model.md  flexicon-api-notes.md  plan.md  probe-results.md  quickstart.md  research.md  spec.md  tasks.md  verification-log.md
specs/008-affix-pos-picker/: .spec-context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-skeleton-deps-selectors/: .spec-context.json  plan.md  spec.md  tasks.md
specs/010-phonology-selector/: .spec-context.json  data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+241 files in other folders)
